fixing spacing issues

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -600,7 +600,10 @@
 }
 
 #rsvp-box-right {
+  @include media-query($on-laptop)
+  {
   flex: 2;
+  }
 }
 
 #past-events, #picture-box {
